# tree-sitter-buzz

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-buzz.h  tree-sitter-buzz.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_buzz/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
